// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListHeader /> snapshot should match snapshot 1`] = `
<ListHeader>
  <ListItemBase
    className="md-list-header-wrapper"
    data-bold={false}
    interactive={false}
    isPadded={true}
    size={32}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-list-header-wrapper md-list-item-base-wrapper"
          data-bold={false}
          data-disabled={false}
          data-interactive={false}
          data-padded={true}
          data-shape="rectangle"
          data-size={32}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        />
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with bold 1`] = `
<ListHeader
  bold={true}
  outline={true}
>
  <ListItemBase
    className="md-list-header-wrapper"
    data-bold={true}
    interactive={false}
    isPadded={true}
    size={32}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-list-header-wrapper md-list-item-base-wrapper"
          data-bold={true}
          data-disabled={false}
          data-interactive={false}
          data-padded={true}
          data-shape="rectangle"
          data-size={32}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        />
      </FocusRing>
    </FocusRing>
  </ListItemBase>
  <Separator>
    <div
      className="list-header-separator"
      data-outline={true}
      data-outline-color="primary"
      data-outline-only={true}
      data-outline-position="bottom"
    />
  </Separator>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with className 1`] = `
<ListHeader
  className="example-class"
>
  <ListItemBase
    className="example-class md-list-header-wrapper"
    data-bold={false}
    interactive={false}
    isPadded={true}
    size={32}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="example-class md-list-header-wrapper md-list-item-base-wrapper"
          data-bold={false}
          data-disabled={false}
          data-interactive={false}
          data-padded={true}
          data-shape="rectangle"
          data-size={32}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        />
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with id 1`] = `
<ListHeader
  id="example-id"
>
  <ListItemBase
    className="md-list-header-wrapper"
    data-bold={false}
    id="example-id"
    interactive={false}
    isPadded={true}
    size={32}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-list-header-wrapper md-list-item-base-wrapper"
          data-bold={false}
          data-disabled={false}
          data-interactive={false}
          data-padded={true}
          data-shape="rectangle"
          data-size={32}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        />
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with outline 1`] = `
<ListHeader
  outline={true}
>
  <ListItemBase
    className="md-list-header-wrapper"
    data-bold={false}
    interactive={false}
    isPadded={true}
    size={32}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-list-header-wrapper md-list-item-base-wrapper"
          data-bold={false}
          data-disabled={false}
          data-interactive={false}
          data-padded={true}
          data-shape="rectangle"
          data-size={32}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        />
      </FocusRing>
    </FocusRing>
  </ListItemBase>
  <Separator>
    <div
      className="list-header-separator"
      data-outline={true}
      data-outline-color="primary"
      data-outline-only={true}
      data-outline-position="bottom"
    />
  </Separator>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with outlineColor 1`] = `
<ListHeader
  outline={true}
  outlineColor="secondary"
>
  <ListItemBase
    className="md-list-header-wrapper"
    data-bold={false}
    interactive={false}
    isPadded={true}
    size={32}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-list-header-wrapper md-list-item-base-wrapper"
          data-bold={false}
          data-disabled={false}
          data-interactive={false}
          data-padded={true}
          data-shape="rectangle"
          data-size={32}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        />
      </FocusRing>
    </FocusRing>
  </ListItemBase>
  <Separator>
    <div
      className="list-header-separator"
      data-outline={true}
      data-outline-color="secondary"
      data-outline-only={true}
      data-outline-position="bottom"
    />
  </Separator>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with outlinePosition 1`] = `
<ListHeader
  outline={true}
  outlinePosition="bottom"
>
  <ListItemBase
    className="md-list-header-wrapper"
    data-bold={false}
    interactive={false}
    isPadded={true}
    size={32}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-list-header-wrapper md-list-item-base-wrapper"
          data-bold={false}
          data-disabled={false}
          data-interactive={false}
          data-padded={true}
          data-shape="rectangle"
          data-size={32}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        />
      </FocusRing>
    </FocusRing>
  </ListItemBase>
  <Separator>
    <div
      className="list-header-separator"
      data-outline={true}
      data-outline-color="primary"
      data-outline-only={true}
      data-outline-position="bottom"
    />
  </Separator>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with outlinePosition 2`] = `
<ListHeader
  outline={true}
  outlinePosition="bottom"
>
  <ListItemBase
    className="md-list-header-wrapper"
    data-bold={false}
    interactive={false}
    isPadded={true}
    size={32}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-list-header-wrapper md-list-item-base-wrapper"
          data-bold={false}
          data-disabled={false}
          data-interactive={false}
          data-padded={true}
          data-shape="rectangle"
          data-size={32}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        />
      </FocusRing>
    </FocusRing>
  </ListItemBase>
  <Separator>
    <div
      className="list-header-separator"
      data-outline={true}
      data-outline-color="primary"
      data-outline-only={true}
      data-outline-position="bottom"
    />
  </Separator>
</ListHeader>
`;

exports[`<ListHeader /> snapshot should match snapshot with style 1`] = `
<ListHeader
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ListItemBase
    className="md-list-header-wrapper"
    data-bold={false}
    interactive={false}
    isPadded={true}
    size={32}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-list-header-wrapper md-list-item-base-wrapper"
          data-bold={false}
          data-disabled={false}
          data-interactive={false}
          data-padded={true}
          data-shape="rectangle"
          data-size={32}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          style={
            Object {
              "color": "pink",
            }
          }
          tabIndex={-1}
        />
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</ListHeader>
`;
